<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    android:orientation="vertical"
    android:padding="@dimen/form_padding" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_start"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/elevation_start" />

        <TextView
            android:id="@+id/text_change"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/elevation_change" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_elevation"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/waiting"
        android:textColor="@color/main_elevation_color"
        android:textSize="@dimen/elevation_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/prn_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/visible_sats" />

        <TextView
            android:id="@+id/gps_fix_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/gps_fix_quality" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/gps_number_of_satellites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/gps_number_of_satellites" />

        <TextView
            android:id="@+id/gps_signal_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/gps_signal_strength" />

    </LinearLayout>

    <com.finalhack.totalelevation.Graph
        android:layout_height="@dimen/graph_height"
        android:layout_width="0dp"
        android:id="@+id/graph" />
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="6" >

            <TextView
                android:id="@+id/text_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/form_padding"
                android:gravity="left"
                android:text="@string/lat" />

            <TextView
                android:id="@+id/text_lon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/form_padding"
                android:gravity="left"
                android:text="@string/lon" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:onClick="help"
            android:src="@drawable/help" />

    </LinearLayout>

</LinearLayout>
